--- a/build.gradle
+++ b/build.gradle
@@ -4,17 +4,17 @@ version '1.0-SNAPSHOT'
 apply plugin: 'java'
 apply plugin: 'maven'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 9
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 
     compile 'com.google.guava:guava:11.0.2'
     compile 'org.apache.commons:commons-lang3:3.5'
     compile 'org.apache.commons:commons-io:1.3.2'
     compile 'org.jsoup:jsoup:1.9.2'
+    compile 'org.junit.jupiter:junit-jupiter-api:5.1.0'
 }
